# python-project-lvl2

./: .gitignore  Makefile  README.md  for_asciinema  pyproject.toml
.github/workflows/: githab-actions.yml
gendiff/: __init__.py
gendiff/libs/: diff_flat.py  diff_parser.py  style_block.py  style_json.py  style_plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: expected.py  test_gendiff.py  test_venv.py
tests/fixtures/: file1_complex.json  file1_complex.yaml  file2_complex.yaml  file_unformat.txt
